kludgy hack to ensure the SCSS file is saved in UTF8 format by all tools, while a Unicode bit of text is added *way down* in the text file (ellipsis for text clipping).

--- a/src/dat/gui/_structure.scss
+++ b/src/dat/gui/_structure.scss
@@ -1,3 +1,22 @@
+/**
+ * dat.GUI JavaScript Controller Library
+ * http://code.google.com/p/dat-gui
+ *
+ * Copyright 2011-2020 Data Arts Team, Google Creative Lab
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ */
+
+// ▐▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▌
+// ▐ Triggering UTF8 file save hack ▌
+// ▐▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▌
+//
+// --------------------------------------------------------------
+
 $nest-margin: 4px;
 $row-height: 27px;
 
@@ -59,7 +78,7 @@ $button-height: 20px;
     }
 
     .close-button {
-      /* opacity: 0; */
+      // opacity: 0;
       @include transition(opacity, 0.1s, linear);
 
       border: 0;
@@ -147,6 +166,8 @@ $button-height: 20px;
     width: 40%;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-overflow: "…" "…"; // https://developer.mozilla.org/en-US/docs/Web/CSS/text-overflow
+    white-space: nowrap; // otherwise the text will simply wrap and the text-overflow ellipsis will not be applied, but instead the text simply disappears (if only partially)
   }
 
   /** Controller-half (right) */
@@ -165,11 +186,13 @@ $button-height: 20px;
   }
 
   /** Shorter number boxes when slider is present. */
-  .has-slider input[type="text"] {
+  .has-slider {
+  input[type="text"] {
     width: 30%;
 
-    /* display: none; */
+      // display: none;
     margin-left: 0;
+}
   }
 
   .slider {
@@ -195,8 +218,7 @@ $button-height: 20px;
 
   /** Ensure the entire boolean and function row shows a hand */
   .cr.function,
-  .cr.function .property-name,
-  /* Don't know why I need to be this explicit */
+  .cr.function .property-name,  // Don't know why I need to be this explicit 
   .cr.function *,
   .cr.boolean,
   .cr.boolean * {
@@ -235,7 +257,6 @@ $button-height: 20px;
 }
 
 /* TODO Separate style and structure */
-
 #dg-new-constructor {
   padding: 10px;
   color: #222222;
